# port-audio-play

./: HPlay.hsc  hplay.cabal  port-audio-play.cabal  test.hs
Sound/: Play.hsc
cbits/: play.c  play.h
tests/: test.c
